src/objects/csord__Order__c.object
<CustomObject>
    <description>The central object in the process of setting up the whole solution. Lives only as long as is needed for the fulfillment process to finish.</description>
      <fields>
        <fullName>LG_Asset_without_ESN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset without ESN?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_BDS__c</fullName>
        <label>LG_BDS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationPlannedDate__c</fullName>
        <label>Installation Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_InstallationWishDate__c</fullName>
        <label>Installation Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_MarketSegment__c</fullName>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NewOrderVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to new version of the Order</description>
        <inlineHelpText>Used for history tracking during complex changes</inlineHelpText>
        <label>New Order Version</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Orders (New Order Version)</relationshipLabel>
        <relationshipName>NewOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PICReason__c</fullName>
        <label>LG_PICReason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PreviousOrderVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to previous version of Order</description>
        <inlineHelpText>Used for history tracking during complex changes</inlineHelpText>
        <label>Previous Order Version</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Orders (Previous Order Version)</relationshipLabel>
        <relationshipName>PreviousOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>cscrm__Site__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_SoftDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for versioning and tracking</description>
        <inlineHelpText>Indicates that the record is not relevant do to the change is active version (newer or older version exists and it is active)</inlineHelpText>
        <label>Soft Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_TerminatedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terminated Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_WaitForNewProvide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wait for New Provide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Partner_Id__c</fullName>
        <formula>if( UM_State__c ==&apos;NRW&apos; || UM_State__c ==&apos;HSN&apos;, csordtelcoa__Opportunity__r.UM_PartnerAccount__r.UM_P_Sales_ID_NRW_HSN__c, csordtelcoa__Opportunity__r.UM_PartnerAccount__r.UM_P_Sales_ID_BW__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Partner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_State1__c</fullName>
        <label>UM State1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_State__c</fullName>
        <formula>IF(csord__Related_Service__r.csord__Service__c == &apos;&apos;,csord__Related_Service__r.UM_State__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UM State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that currently receives this order</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Cease_Category__c</fullName>
        <description>DEPRECATED. Main category to indicate why the service has been ceased</description>
        <inlineHelpText>DEPRECATED. Select the main category for the service cease</inlineHelpText>
        <label>Cease Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial / Admin</fullName>
                </value>
                <value>
                    <fullName>Non-renewal - Preferred Supplier</fullName>
                </value>
                <value>
                    <fullName>Non-renewal - Product Not Required</fullName>
                </value>
                <value>
                    <fullName>Non-renewal - Service Issues</fullName>
                </value>
                <value>
                    <fullName>Product Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Regrade</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Cease_Reason_Comment__c</fullName>
        <description>DEPRECATED. Free text reason for the cease order, supporting the selected category and reason code</description>
        <inlineHelpText>DEPRECATED. Enter a short comment about why the cease order has been raised</inlineHelpText>
        <label>Cease Reason Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csord__Cease_Reason__c</fullName>
        <description>DEPRECATED. The main reason for ceasing the service</description>
        <inlineHelpText>DEPRECATED. Select the main reason for ceasing the service</inlineHelpText>
        <label>Cease Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>csord__Cease_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Error</fullName>
                </value>
                <value>
                    <fullName>Ceased Trading / Liquidation / Merged</fullName>
                </value>
                <value>
                    <fullName>Consolidation to Major Supplier</fullName>
                </value>
                <value>
                    <fullName>Customer Service - Lack of update</fullName>
                </value>
                <value>
                    <fullName>Office Closed</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Price Renegotiation</fullName>
                </value>
                <value>
                    <fullName>Contract Amendment</fullName>
                </value>
                <value>
                    <fullName>Product Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Services now In-House</fullName>
                </value>
                <value>
                    <fullName>Support - resolution took too long</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Cease_Stage__c</fullName>
        <description>DEPRECATED. Defines the cease stages for orders</description>
        <inlineHelpText>DEPRECATED.</inlineHelpText>
        <label>Cease Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>csord__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Cancellation Request</fullName>
                </value>
                <value>
                    <fullName>Customer Cancellation Stopped</fullName>
                </value>
                <value>
                    <fullName>Customer Cancellation Confirmed</fullName>
                </value>
                <value>
                    <fullName>Customer Cancellation Authorised</fullName>
                </value>
                <value>
                    <fullName>Replacement Active</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Customer_Order_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A customer-facing order number to identify this Order</description>
        <externalId>true</externalId>
        <inlineHelpText>A customer-facing order number to identify this Order</inlineHelpText>
        <label>Customer Order Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Desired_Cease_Date__c</fullName>
        <description>DEPRECATED. The date the customer would like the service to be ceased</description>
        <inlineHelpText>DEPRECATED. Enter the date the customer would like the service to be ceased</inlineHelpText>
        <label>Desired Cease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__End_Date__c</fullName>
        <description>The date the order ended</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <inlineHelpText>DEPRECATED.</inlineHelpText>
        <label>Order Group</label>
        <referenceTo>csord__Order_Group__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order_Number__c</fullName>
        <description>An auto number defining the Order.</description>
        <displayFormat>ON{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>An auto number defining the Order.</inlineHelpText>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Order Request which introduced the latest changes to this Order.</description>
        <inlineHelpText>The Order Request which introduced the latest changes to this Order.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order_Type__c</fullName>
        <description>Type of the order</description>
        <inlineHelpText>Type of the order. The value should be one of: Subscription Creation, Subscription Change or Product Delivery</inlineHelpText>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Primary_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used if the Order is introducing changes/additions to a solution created by a previous, primary Order.</description>
        <inlineHelpText>Used if the Order is introducing changes/additions to a solution created by a previous, primary Order.</inlineHelpText>
        <label>Primary Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Secondary Orders</relationshipLabel>
        <relationshipName>Secondary_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only in the context of Product Delivery order type. The asset / physical aspect being delivered could apply to child services but due to the modelling this may be unknown.</description>
        <inlineHelpText>This is the service for which the Product Delivery order is attached to. Note that the related service might be the placeholder for child services that actually use the item that has been order.</inlineHelpText>
        <label>Related Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Delivery Orders</relationshipLabel>
        <relationshipName>Delivery_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Solution of this Order</description>
        <inlineHelpText>The parent Solution of this Order</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Start_Date__c</fullName>
        <description>Start date of the order</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csord__Status2__c</fullName>
        <description>The status of the Order in the fulfillment process.</description>
        <inlineHelpText>Used for state transitions.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Status_Reason__c</fullName>
        <description>DEPRECATED. Reason explaining the status of the order</description>
        <inlineHelpText>DEPRECATED.</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>csord__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Regrade Down (Lesser product)</fullName>
                </value>
                <value>
                    <fullName>Regrade Up (Higher product)</fullName>
                </value>
                <value>
                    <fullName>Down-grade (Same product)</fullName>
                </value>
                <value>
                    <fullName>Up-grade (Same product)</fullName>
                </value>
                <value>
                    <fullName>Backup (to primary order)</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Price Change / Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Price Change / Contract Amendment</fullName>
                </value>
                <value>
                    <fullName>Non-payment</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Customer Requests Cease</fullName>
                </value>
                <value>
                    <fullName>Account Manager Confirms Cease</fullName>
                </value>
                <value>
                    <fullName>Customer Retained</fullName>
                </value>
                <value>
                    <fullName>Customer Cease Actioned</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Customer cancellation - no longer required</fullName>
                </value>
                <value>
                    <fullName>Customer site not suitable</fullName>
                </value>
                <value>
                    <fullName>No Supplier capacity available</fullName>
                </value>
                <value>
                    <fullName>Supplier cannot deliver order</fullName>
                </value>
                <value>
                    <fullName>Wayleave permission denied</fullName>
                </value>
                <value>
                    <fullName>Excess charges not agreed by the Customer</fullName>
                </value>
                <value>
                    <fullName>Speed not available</fullName>
                </value>
                <value>
                    <fullName>Incorrect Quote</fullName>
                </value>
                <value>
                    <fullName>Suspension lifted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Status__c</fullName>
        <description>DEPRECATED. Defines the status of the order through fulfilment to delivery.</description>
        <inlineHelpText>DEPRECATED. Use Status2__c.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Provisioning</fullName>
                    <default>true</default>
                    <label>In Provisioning</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Not Provisioned</fullName>
                </value>
                <value>
                    <fullName>Pending Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csord__Total_One_Off_Charges__c</fullName>
        <description>Sum of all the charges on all of the delivery order’s line items</description>
        <inlineHelpText>Sum of all the charges on all of the delivery order’s line items</inlineHelpText>
        <label>Total One-Off Charges</label>
        <summarizedField>csord__Order_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryForeignKey>csord__Order_Line_Item__c.csord__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>LG_Opportunity_Related_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Related Filter</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>LG_Account_Related_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Related Filter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Parent_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup based hierarchy filled with the Configurator mapping</description>
        <label>Parent Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Orders (Parent Product Configuration)</relationshipLabel>
        <relationshipName>ParentProductConfigurationOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Configuration lookup, basically 1:1 relationship, the lookup value is used only in Product Delivery typed orders</description>
        <inlineHelpText>Product Configuration lookup for Product Delivery typed orders</inlineHelpText>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All_Orders</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csordtelcoa__Opportunity__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cancel_Requested</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Cancel Requested</value>
        </filters>
        <label>Cancel Requested</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canel_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Cancel Confirmed</value>
        </filters>
        <label>Cancel Confirmed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Change Confirmed</value>
        </filters>
        <label>Change Confirmed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Orders</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>In Provisioning</value>
        </filters>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Some Suborders Completed</value>
        </filters>
        <label>Open Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Order_Management_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Management</label>
        <queue>Order_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Orders_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>LG_Site__c</columns>
        <columns>csord__Account__c</columns>
        <columns>LG_Address__c</columns>
        <columns>csord__Status__c</columns>
        <columns>csord__Status_Reason__c</columns>
        <columns>csord__Solution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Orders Cancelled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Orders_Closed</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Orders Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Orders_Submitted</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Order Submitted</value>
        </filters>
        <label>Orders Submitted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Some_Suborders_Completed</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>csord__Customer_Order_Number__c</columns>
        <columns>csord__Order_Number__c</columns>
        <columns>LG_OrderNumber__c</columns>
        <columns>csord__Order_Type__c</columns>
        <columns>csord__Status2__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status2__c</field>
            <operation>equals</operation>
            <value>Some Suborders Completed</value>
        </filters>
        <label>Some Suborders Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>csord__All</fullName>
        <columns>csord__Order_Number__c</columns>
        <columns>NAME</columns>
        <columns>csord__External_Identifier2__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>csord__Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>csord__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>csord__Cease_Order</fullName>
        <active>true</active>
        <description>Cease Order record type</description>
        <label>Cease Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>csord__Change_Order</fullName>
        <active>true</active>
        <description>Change Order record type</description>
        <label>Change Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>csord__New_Order</fullName>
        <active>true</active>
        <description>New Order record type</description>
        <label>New Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>